# AI-ShortVideo-Agent

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: workflow-request.md
docs/: openai-codex-oss-application.md  roadmap.md
docs/superpowers/plans/: 2026-06-29-ai-shortvideo-agent.md
docs/superpowers/specs/: 2026-06-29-ai-shortvideo-agent-design.md
docs/workflows/: douyin-operations.md  enterprise-promo.md  wechat-channels.md
examples/: brief.yaml  sample-output.md  trend-report.json
prompts/: publishing-calendar.md  trend-analysis.md  video-script.md
src/shortvideo_agent/: __init__.py  cli.py  planner.py
tests/: test_planner.py
